# ngseed

./: .gitignore  .release-please-config.json  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release.yml  rust.yml
src/: lib.rs  main.rs
src/application/: ports.rs
src/application/use_cases/: new_project.rs
src/domain/: mod.rs  project.rs  styles_choice.rs  tui_input.rs
src/infrastructure/: console_progress_reporter.rs  dialoguer_ui_selector.rs  mod.rs  system_environment.rs  system_seeder.rs
src/interfaces/: cli.rs
templates/angular/: app.component.html.j2  app.component.ts.j2  app.config.ts.j2  get-greeting.use-case.ts.j2  greeting-repository.port.ts.j2  greeting.entity.ts.j2  greeting.provider.ts.j2  home.facade.ts.j2  static-greeting.repository.ts.j2
templates/angular/architecture/clean/application/: {{ action }}.use-case.ts.j2
templates/angular/architecture/clean/domain/: {{ name }}-repository.port.ts.j2  {{ name }}.entity.ts.j2
templates/angular/architecture/clean/infrastructure/: {{ name }}.provider.ts.j2  {{ name }}.repository.ts.j2
templates/angular/core/: api.service.ts.j2  auth.service.ts.j2  logger.service.ts.j2
templates/angular/core/service/: {{ name }}.service.ts.j2
templates/angular/setup/docker/: Dockerfile.j2  docker-compose.yml.j2
templates/angular/setup/env/: environment.ts.j2
templates/angular/setup/git/: .gitattributes.j2  .gitignore.j2
templates/angular/state/: {{ name }}.actions.ts.j2  {{ name }}.facade.ts.j2  {{ name }}.store.ts.j2
templates/angular/ui/_shared/facade/: {{ name }}.facade.ts.j2
(+23 files in other folders)
