[package]
name = "ngseed"
version = "0.2.2"
edition = "2024"
description = "Angular project initializer with clean architecture scaffolding and optional UI integrations"
license = "GPL-3.0"
repository = "https://github.com/example/ng-seeder"
readme = "README.md"
keywords = ["angular", "cli", "scaffold", "clean-architecture"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
console = "0.15"
dialoguer = "0.11"
indicatif = "0.17"
minijinja = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.10"
